# rules_fastlane

./: .gitignore  BUILD  MODULE.bazel  WORKSPACE
examples/trivial/: BUILD  MODULE.bazel
examples/trivial/ios/: App.swift  BUILD  Info.plist
fastlane/: BUILD  defs.bzl
fastlane/private/: BUILD  common.bzl  defs.bzl  pilot.bzl  providers.bzl
fastlane/private/templates/: BUILD  pilot_upload.tpl
tools/: BUILD
