bazel_dep(name = "rules_ruby", version = "0.12.1")

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.3.0",
)
ruby.bundle_fetch(
    name = "bundle",
    env = {
        "CC": "/opt/homebrew/opt/llvm/bin/clang",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "apple_support", version = "1.17.0", dev_dependency = True, repo_name = "build_bazel_apple_support")
