module(
    name = "rules_fastlane",
    version = "0.0.1",
    compatibility_level = 1,
)

bazel_dep(name = "rules_apple", version = "3.9.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "2.1.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_ruby", version = "0.12.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")

bazel_dep(name = "stardoc", version = "0.7.1", dev_dependency = True)

ruby = use_extension("@rules_ruby//ruby:extensions.bzl", "ruby")
ruby.toolchain(
    name = "ruby",
    version = "3.3.0",
)
ruby.bundle_fetch(
    name = "bundle",
    env = {
        "CC": "/opt/homebrew/opt/llvm/bin/clang",
    },
    gemfile = "//:Gemfile",
    gemfile_lock = "//:Gemfile.lock",
)
use_repo(ruby, "bundle", "ruby_toolchains")

register_toolchains("@ruby_toolchains//:all")

bazel_dep(name = "apple_support", version = "1.17.0", dev_dependency = True, repo_name = "build_bazel_apple_support")
